--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "materialize-mui-react-nextjs-admin-template",
+  "homepage": "https://ged-client.onrender.com",
   "version": "2.0.0",
   "private": true,
   "scripts": {
