--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_ENDPOINT=https://ged-client.onrender.com
+REACT_APP_API_ENDPOINT=https://ged-server.onrender.com/
 
 NEXT_PUBLIC_JWT_EXPIRATION= 5m
 NEXT_PUBLIC_JWT_SECRET= dd5f3089-40c3-403d-af14-d0c228b05cb4
