--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "materialize-mui-react-nextjs-admin-template",
-    "version": "2.0.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -29,6 +29,8 @@
     "@fullcalendar/timegrid": "5.11.3",
     "@hookform/resolvers": "2.9.10",
     "@iconify/react": "4.0.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@mui/lab": "5.0.0-alpha.105",
     "@mui/material": "5.10.11",
     "@mui/x-data-grid": "5.17.9",
