--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/eslint-parser": "7.19.1",
     "@casl/ability": "6.3.2",
     "@casl/react": "3.1.0",
+    "@date-io/dayjs": "^2.16.0",
     "@emotion/cache": "11.10.5",
     "@emotion/react": "11.10.5",
     "@emotion/server": "11.10.0",
@@ -33,6 +34,7 @@
     "@mui/lab": "5.0.0-alpha.105",
     "@mui/material": "5.10.11",
     "@mui/x-data-grid": "5.17.9",
+    "@mui/x-date-pickers": "^6.0.4",
     "@popperjs/core": "2.11.6",
     "@reduxjs/toolkit": "1.8.6",
     "apexcharts-clevision": "3.28.5",
@@ -44,6 +46,7 @@
     "clipboard-copy": "4.0.1",
     "clsx": "1.2.1",
     "date-fns": "2.29.3",
+    "dayjs": "^1.11.7",
     "draft-js": "0.11.7",
     "firebase": "9.13.0",
     "i18next": "22.0.4",
