--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "dayjs": "^1.11.7",
         "draft-js": "0.11.7",
         "firebase": "9.13.0",
+        "html2pdf.js": "^0.10.1",
         "i18next": "22.0.4",
         "i18next-browser-languagedetector": "7.0.0",
         "i18next-http-backend": "2.0.0",
