--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "clsx": "1.2.1",
         "date-fns": "2.29.3",
         "dayjs": "^1.11.7",
+        "dotenv": "^16.0.3",
         "draft-js": "0.11.7",
         "firebase": "9.13.0",
         "html2pdf.js": "^0.10.1",
