--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "cleave.js": "1.6.0",
         "clipboard-copy": "4.0.1",
         "clsx": "1.2.1",
+        "crypto-js": "^4.1.1",
         "date-fns": "2.29.3",
         "dayjs": "^1.11.7",
         "dotenv": "^16.0.3",
