--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
         "react-beautiful-dnd": "13.1.1",
         "react-chartjs-2": "4.3.1",
         "react-credit-cards": "0.8.3",
-        "react-datepicker": "4.8.0",
+        "react-datepicker": "^4.12.0",
         "react-dom": "18.2.0",
         "react-dom-server": "^0.0.5",
         "react-draft-wysiwyg": "1.15.0",
