--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@iconify/react": "4.0.0",
         "@material-ui/core": "^4.12.4",
         "@material-ui/data-grid": "^4.0.0-alpha.37",
+        "@material-ui/pickers": "^3.3.10",
         "@mui/lab": "5.0.0-alpha.105",
         "@mui/material": "5.10.11",
         "@mui/x-data-grid": "5.17.9",
@@ -47,7 +48,7 @@
         "clipboard-copy": "4.0.1",
         "clsx": "1.2.1",
         "crypto-js": "^4.1.1",
-        "date-fns": "2.29.3",
+        "date-fns": "^2.29.3",
         "dayjs": "^1.11.7",
         "dotenv": "^16.0.3",
         "draft-js": "0.11.7",
@@ -76,7 +77,7 @@
         "react-dom-server": "^0.0.5",
         "react-draft-wysiwyg": "1.15.0",
         "react-dropzone": "14.2.3",
-        "react-hook-form": "7.38.0",
+        "react-hook-form": "^7.38.0",
         "react-hot-toast": "2.4.0",
         "react-html-email": "^3.0.0",
         "react-i18next": "12.0.0",
