--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@material-ui/pickers": "^3.3.10",
         "@mui/lab": "5.0.0-alpha.105",
         "@mui/material": "5.10.11",
+        "@mui/styles": "^5.13.2",
         "@mui/x-data-grid": "5.17.9",
         "@mui/x-date-pickers": "^6.0.4",
         "@popperjs/core": "2.11.6",
@@ -95,6 +96,7 @@
         "@iconify/tools": "2.1.1",
         "@iconify/types": "2.0.0",
         "@iconify/utils": "2.0.1",
+        "autoprefixer": "^10.4.14",
         "eslint": "8.26.0",
         "eslint-config-next": "13.0.0",
         "eslint-config-prettier": "8.5.0",
@@ -102,7 +104,9 @@
         "eslint-import-resolver-typescript": "3.5.2",
         "eslint-plugin-import": "2.26.0",
         "next-transpile-modules": "9.1.0",
-        "prettier": "2.7.1"
+        "postcss": "^8.4.24",
+        "prettier": "2.7.1",
+        "tailwindcss": "^3.3.2"
     },
     "resolutions": {
         "minipass": "3.3.5",
