--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@mui/x-data-grid": "5.17.9",
         "@mui/x-date-pickers": "^6.0.4",
         "@popperjs/core": "2.11.6",
+        "@react-pdf/renderer": "^3.1.10",
         "@reduxjs/toolkit": "1.8.6",
         "@types/node": "^20.2.4",
         "apexcharts-clevision": "3.28.5",
@@ -51,11 +52,12 @@
         "crypto-js": "^4.1.1",
         "date-fns": "^2.29.3",
         "dayjs": "^1.11.7",
+        "dom-to-image": "^2.6.0",
         "dotenv": "^16.0.3",
         "draft-js": "0.11.7",
         "firebase": "9.13.0",
         "fs": "^0.0.1-security",
-        "html-pdf": "^3.0.1",
+        "html2canvas": "^1.4.1",
         "html2pdf.js": "^0.10.1",
         "i18next": "22.0.4",
         "i18next-browser-languagedetector": "7.0.0",
@@ -64,6 +66,7 @@
         "keen-slider": "6.8.3",
         "moment": "^2.29.4",
         "next": "13.0.0",
+        "node-fetch": "^3.3.1",
         "nodemailer": "^6.9.2",
         "nprogress": "0.2.0",
         "payment": "2.4.6",
