--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "dotenv": "^16.0.3",
         "draft-js": "0.11.7",
         "firebase": "9.13.0",
+        "formik": "^2.4.2",
         "fs": "^0.0.1-security",
         "html2canvas": "^1.4.1",
         "html2pdf.js": "^0.10.1",
@@ -95,6 +96,7 @@
         "yup": "0.32.11"
     },
     "devDependencies": {
+        "@hookform/devtools": "^4.3.1",
         "@iconify/iconify": "3.0.0",
         "@iconify/json": "2.1.131",
         "@iconify/tools": "2.1.1",
