--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
         "@mui/x-data-grid": "5.17.9",
         "@mui/x-date-pickers": "^6.0.4",
         "@popperjs/core": "2.11.6",
-        "@react-pdf/renderer": "^3.1.10",
+        "@react-pdf/renderer": "^3.1.12",
         "@reduxjs/toolkit": "1.8.6",
         "@types/node": "^20.2.4",
         "apexcharts-clevision": "3.28.5",
-        "axios": "1.1.3",
+        "axios": "^1.1.3",
         "axios-mock-adapter": "1.21.2",
         "babel-eslint": "10.1.0",
         "chart.js": "3.9.1",
@@ -64,6 +64,7 @@
         "i18next-browser-languagedetector": "7.0.0",
         "i18next-http-backend": "2.0.0",
         "jsonwebtoken": "8.5.1",
+        "jspdf": "^2.5.1",
         "keen-slider": "6.8.3",
         "moment": "^2.29.4",
         "next": "13.0.0",
@@ -78,7 +79,7 @@
         "react-chartjs-2": "4.3.1",
         "react-credit-cards": "0.8.3",
         "react-datepicker": "^4.12.0",
-        "react-dom": "18.2.0",
+        "react-dom": "^18.2.0",
         "react-dom-server": "^0.0.5",
         "react-draft-wysiwyg": "1.15.0",
         "react-dropzone": "14.2.3",
