--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "keen-slider": "6.8.3",
         "moment": "^2.29.4",
         "next": "13.0.0",
+        "next-fonts": "^1.5.1",
         "node-fetch": "^3.3.1",
         "nodemailer": "^6.9.2",
         "nprogress": "0.2.0",
